# Project

./: .gitignore  Report.md  build.sh  gen_data.cpp  gen_data.job
Builds/CUDA/: CMakeLists.txt  bitonic.grace_job  bubble-256-4096.cali  bubblesort.cu  bucket-256-4096.cali  bucket.cu  build.sh  exec.sh  helper.cu  quick-256-4096.cali  quicksort.cpp  quicksort.cu  sample-256-4096.cali  samplesort.cu
Builds/CUDA/Bubble_Cali_files/: t1024-v1048576-m0.cali  t1024-v1048576-m1.cali  t1024-v1048576-m2.cali  t1024-v1048576-m3.cali  t1024-v16777216-m0.cali  t1024-v262144-m0.cali  t1024-v262144-m1.cali  t1024-v262144-m2.cali  t1024-v262144-m3.cali  t1024-v4194304-m0.cali  t1024-v4194304-m3.cali  t1024-v65536-m0.cali  t1024-v65536-m1.cali  t1024-v65536-m2.cali  t1024-v65536-m3.cali  t1024-v67108864-m2.cali  t128-v1048576-m0.cali  t128-v1048576-m1.cali  t128-v1048576-m2.cali  t128-v1048576-m3.cali  t128-v16777216-m0.cali  t128-v16777216-m1.cali  t128-v16777216-m2.cali  t128-v262144-m0.cali  t128-v262144-m1.cali  t128-v262144-m2.cali  t128-v262144-m3.cali  t128-v4194304-m1.cali  t128-v65536-m0.cali  t128-v65536-m1.cali  t128-v65536-m2.cali  t128-v65536-m3.cali  t256-v1048576-m0.cali  t256-v1048576-m1.cali  t256-v1048576-m2.cali  t256-v1048576-m3.cali  t256-v16777216-m0.cali  t256-v262144-m0.cali  t256-v262144-m1.cali  t256-v262144-m2.cali  (+40 more)
Builds/MPI/: CMakeLists.txt  bubblesort.cali  bubblesort.cpp  bucket.cpp  build.sh  exec.sh  gen_data.cpp  helper.cpp  mpi.grace_job  p4.cali  quicksort.cpp  samplesort.cpp
quicksortcuda/: t1024-v1048576-m0(1)(1).cali  t1024-v1048576-m2(1)(1).cali  t1024-v16777216-m3(1)(1).cali  t1024-v262144-m0(1)(1).cali  t1024-v262144-m2(1)(1).cali  t1024-v262144-m3(1)(1).cali  t1024-v268435456-m0(1).cali  t1024-v4194304-m0(1)(1).cali  t1024-v4194304-m1(1)(1).cali  t1024-v4194304-m2(1)(1).cali  t1024-v65536-m1(1)(1).cali  t1024-v65536-m2(1)(1).cali  t1024-v65536-m3(1)(1).cali  t128-v1048576-m0(1)(1).cali  t128-v1048576-m2(1)(1).cali  t128-v16777216-m1(1)(1).cali  t128-v16777216-m2(1)(1).cali  t128-v262144-m0(1)(1).cali  t128-v262144-m2(1)(1).cali  t128-v262144-m3(1)(1).cali  t128-v4194304-m1(1)(1).cali  t128-v4194304-m2(1)(1).cali  t128-v4194304-m3(1)(1).cali  t128-v65536-m1(1)(1).cali  t128-v65536-m3(1)(1).cali  t256-v1048576-m0(1)(1).cali  t256-v1048576-m1(1)(1).cali  (+13 more)
(+582 files in other folders)
